examples/test/testpolicy10237.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10237
  namespace: namespace417
spec:
  podSelector:
    matchLabels:
      key46: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value43
          key36: value3
          key6: value7
      podSelector:
        matchLabels:
          key23: value10
          key28: value37
